// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render RecordList with records 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecordList
    records={
      Array [
        Object {
          "gradeLevel": 3,
          "gradingDate": 0,
          "id": "1",
          "mainDojo": "Keynsham",
          "name": "Bill Jo",
        },
        Object {
          "gradeLevel": 4,
          "gradingDate": 2,
          "id": "2",
          "mainDojo": "Emersons Green",
          "name": "Bo Ko",
        },
        Object {
          "gradeLevel": 8,
          "gradingDate": 24,
          "id": "3",
          "mainDojo": "Filton",
          "name": "See Yay",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <RecordListItem
          gradeLevel={3}
          gradingDate={0}
          id="1"
          mainDojo="Keynsham"
          name="Bill Jo"
        />,
        <RecordListItem
          gradeLevel={4}
          gradingDate={2}
          id="2"
          mainDojo="Emersons Green"
          name="Bo Ko"
        />,
        <RecordListItem
          gradeLevel={8}
          gradingDate={24}
          id="3"
          mainDojo="Filton"
          name="See Yay"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "gradeLevel": 3,
          "gradingDate": 0,
          "id": "1",
          "mainDojo": "Keynsham",
          "name": "Bill Jo",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "gradeLevel": 4,
          "gradingDate": 2,
          "id": "2",
          "mainDojo": "Emersons Green",
          "name": "Bo Ko",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "gradeLevel": 8,
          "gradingDate": 24,
          "id": "3",
          "mainDojo": "Filton",
          "name": "See Yay",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <RecordListItem
            gradeLevel={3}
            gradingDate={0}
            id="1"
            mainDojo="Keynsham"
            name="Bill Jo"
          />,
          <RecordListItem
            gradeLevel={4}
            gradingDate={2}
            id="2"
            mainDojo="Emersons Green"
            name="Bo Ko"
          />,
          <RecordListItem
            gradeLevel={8}
            gradingDate={24}
            id="3"
            mainDojo="Filton"
            name="See Yay"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "gradeLevel": 3,
            "gradingDate": 0,
            "id": "1",
            "mainDojo": "Keynsham",
            "name": "Bill Jo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "gradeLevel": 4,
            "gradingDate": 2,
            "id": "2",
            "mainDojo": "Emersons Green",
            "name": "Bo Ko",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "gradeLevel": 8,
            "gradingDate": 24,
            "id": "3",
            "mainDojo": "Filton",
            "name": "See Yay",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`shoulder render RecordList with empty message 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecordList
    records={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        No expenses
      </p>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "No expenses",
      },
      "ref": null,
      "rendered": "No expenses",
      "type": "p",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          No expenses
        </p>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No expenses",
        },
        "ref": null,
        "rendered": "No expenses",
        "type": "p",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
